--- a/app/views/merchant_bulk_discounts/show.html.erb
+++ b/app/views/merchant_bulk_discounts/show.html.erb
@@ -1,9 +1,11 @@
 <%= render partial: "shared/header" %>
+<hr>
 
 <div id="info">
   If a customer buys
   <strong><%= @discount.threshold %></strong>
   unit/s, they get a
   <strong><%= @discount.percentage %></strong>% discount.
-
 </div>
+
+<%= link_to "Edit This Discount", edit_merchant_bulk_discount_path(@merchant, @discount) %>
