--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -22,7 +22,9 @@
       <th scope="col">Item Name</th>
       <th scope="col">Quantity</th>
       <th scope="col">Unit Price</th>
+      <th scope="col">Applied Discount</th>
       <th scope="col">Status</th>
+
     </tr>
   </thead>
   <tbody>
@@ -32,6 +34,11 @@
         <td><%= invoice_item.item.name %></td>
         <td><%= invoice_item.quantity %></td>
         <td><%= invoice_item.item.unit_price %></td>
+        <% unless invoice_item.bulk_discount_id.nil? %>
+          <td><%= link_to "View", merchant_bulk_discount_path(@merchant, invoice_item.bulk_discount_id) %></td>
+        <% else %>
+          <td>None</td>
+        <% end %>
 
         <td>
           <%= form_with url: merchant_invoice_invoice_item_path(@merchant, invoice_item), method: :patch do |form| %>
