Feat: add holiday api data to discounts index

--- a/app/views/merchant_bulk_discounts/index.html.erb
+++ b/app/views/merchant_bulk_discounts/index.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: "shared/header" %>
+<%= render partial: "shared/holidays" %>
 <hr>
 <%= link_to "Create New Discount", new_merchant_bulk_discount_path(@merchant) %>
 
