--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,11 @@
 </div>
 <div class="container d-flex flex-row justify-content-center align-items-center">
   <div class="jumbotron">
+    <h3><%= link_to "Merchant Portal(discounts)", merchant_dashboard_index_path(101) %></h3>
+  </div>
+</div>
+<div class="container d-flex flex-row justify-content-center align-items-center">
+  <div class="jumbotron">
     <h3><%= link_to "Admin Portal", admin_dashboard_path %></h3>
   </div>
 </div>
